--- a/server/package.json
+++ b/server/package.json
@@ -1,22 +1,11 @@
 {
   "name": "ifood-lite",
-  "version": "1.0.0",
-  "description": "A iFood like application for managing food orders",
   "main": "./src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/server.js"
+    "dev": "nodemon ./src/server.js",
+    "migrate": "knex migrate:latest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/isadfrn/ifood-lite.git"
-  },
-  "author": "isadfrn",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/isadfrn/ifood-lite/issues"
-  },
-  "homepage": "https://github.com/isadfrn/ifood-lite#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -26,7 +15,6 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.2.0",
     "multer": "^1.4.5-lts.1",
-    "pm2": "^5.2.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.11"
   },
