--- a/server/package.json
+++ b/server/package.json
@@ -7,18 +7,17 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^2.2.0",
-    "multer": "^1.4.5-lts.1",
-    "sqlite": "^4.1.2",
-    "sqlite3": "^5.0.11"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "prisma": "^4.2.1"
   }
 }
